<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cedula"
            android:inputType="number"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha"
            android:inputType="date"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hora"
            android:inputType="time"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/minutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minutos"
            android:inputType="time"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/segundos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/segundos"
            android:inputType="time"
            android:paddingBottom="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:background="@color/colorAccent"
                android:text="@string/post" />

            <Button
                android:id="@+id/get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="@color/colorAccent"
                android:text="@string/get" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_circular"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>